POR/RefEdge/src/objects/Referenceability_Type__c.object
<CustomObject>
    <description>An object that contains the various Referenceability Types.</description>
    <fields>
        <fullName>Challenge_Type__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Challenge Type code. Used when integrating with Influtiive Advocate Hub.</inlineHelpText>
        <label>Challenge Type</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Icon__c</fullName>
        <label>Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Managed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All requests of this type will be Managed requests and will be handled by the CRP team.</description>
        <inlineHelpText>All requests of this type will be Managed requests and will be handled by the CRP team.</inlineHelpText>
        <label>Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <inlineHelpText>Visible only on the Edit page of Referenceability Types.</inlineHelpText>
        <label>Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Project_type__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This type will appear in the list of available types when creating a new project from the Ref Workspace.</inlineHelpText>
        <label>Project type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ref_Limit_to_Acct_or_Cntct__c</fullName>
        <description>Selecting &quot;Account&quot; indicates this should only show when adding Referenceability to Accounts; selecting &quot;Contact&quot; indicates this should only show when adding Referenceability to Contacts.</description>
        <inlineHelpText>Selecting &quot;Account&quot; indicates this should only show when adding Referenceability to Accounts; selecting &quot;Contact&quot; indicates this should only show when adding Referenceability to Contacts.</inlineHelpText>
        <label>Limit to Account or Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referenceability_Type__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This type will appear in the list of available types when adding referenceability to an Account or Contact, and will show in RefSearch.</inlineHelpText>
        <label>Referenceability Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referenceability_code__c</fullName>
        <description>This is use to give event api code.</description>
        <inlineHelpText>This is use to give event api code.</inlineHelpText>
        <label>Referenceability_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referenceability_no__c</fullName>
        <label>Referenceability no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_type__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>This type will appear in the list of available types when making a request.</inlineHelpText>
        <label>Request type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reward_points__c</fullName>
        <description>This Field Use for Colletion of Reward Point as per Ref Type</description>
        <inlineHelpText>Points that are awarded at the completion of a reference use.</inlineHelpText>
        <label>Customer Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Point__c</fullName>
        <label>User Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Reward__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Reward</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Controls the overall visibility of this Referenceability Type throughout ReferenceEdge – Referenceability, Requests, Projects, Nominations, Reference Use.</inlineHelpText>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>max_accounts_per_request_type__c</fullName>
        <inlineHelpText>Maximum quantity of accounts that can be requested when this is the only request type in a Request.</inlineHelpText>
        <label>Max Accounts per Request</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>min_lead_time_per_request_type__c</fullName>
        <inlineHelpText>Time required by the reference team to fulfill a Managed Request.</inlineHelpText>
        <label>Lead Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Referenceability Type</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referenceability Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>